[project]
name = "dockeryt"
version = "0.0.1"
description = "This is an enviroment python with uv and docker"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Pedro Nascimento" }]

dependencies = [
    "fastapi>=0.125.0",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]
[dependency-groups]
dev = ["pytest>=9.0.2", "watchdog>=6.0.0"]

[project.urls]
Homepage = "https://github.com/PedrinDLC/docker_tests"

[project.scripts]
dockeryt = "dockeryt.script:run"


[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["dockeryt"]


[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]


[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['./src/dockeryt']
